--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.13.5",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-web": "~0.19.13",
+    "twrnc": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
